--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
 # API Configuration
-VITE_API_URL=http://localhost:8000/api/v1
-VITE_SOCKET_URL=http://localhost:8000
+VITE_API_URL=https://social-media-pdbl.onrender.com/api/v1
+VITE_SOCKET_URL=https://social-media-pdbl.onrender.com
 
 # App Configuration
 VITE_APP_NAME="Sociogram"
