--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,8 @@
 # Sociogram Frontend Environment Configuration
 
 # API Configuration
-VITE_API_URL=http://localhost:8000/api/v1
-VITE_SOCKET_URL=http://localhost:8000
+VITE_API_URL=https://social-media-pdbl.onrender.com/api/v1
+VITE_SOCKET_URL=https://social-media-pdbl.onrender.com
 
 # App Configuration
 VITE_APP_NAME=Sociogram
