--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,7 +16,7 @@ CLOUDINARY_API_SECRET="your_api_secret"
 # 🌐 Server Configuration
 PORT=8000
 NODE_ENV=development
-FRONTEND_URL="http://localhost:5000"
+FRONTEND_URL="https://social-media-1-lzs4.onrender.com"
 
 # 📁 File Upload Settings
 MAX_FILE_SIZE=10485760  # 10MB in bytes
